finalized project code

--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -43,7 +43,7 @@
             <!-- submission form -->
             <form id="form" class="cta-form" action="https://www.freecodecamp.com/email-submit" target="_self">
                 <input id="email" class="form__input" name="email" type="email" placeholder="Your Email">
-                <input type="submit" id="submit" form="form" class="form__input" value="Submit">
+                <input type="submit" id="submit-cta" form="form" class="form__input" value="Submit">
             </form>
         </div>
         <!-- feature content -->
